<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Gym Gold App</string>
    //REGISTRO
    <string name="tvtituloregistro">REGISTRARME</string>
    <string name="valetnomusuario">Ingrese su nombre</string>
    <string name="valetapeusuario">Ingrese su apellido</string>
    <string name="valetemailusuario">Ingrese su email</string>
    <string name="valetcelusuario">Ingrese su celular</string>
    <string name="valetusureg">Ingrese su usuario</string>
    <string name="valetpassreg">Ingrese su password</string>
    <string name="valetrepassreg">Vuelva a ingresar su password</string>
    <string name="valbtnregistrarme">QUIERO REGISTRARME</string>
    <string name="valbtnirlogin">VOLVER A LOGIN</string>
    <string name="valtvtextovoluntario">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="valchkaceptocondiciones">ACEPTO LAS CONDICIONES DE SER VOLUNTARIO</string>
    <string name="valbtnregvoluntario">REGISTRAR</string>
    <string name="valtvtituvoluntario">¿Quieres ser voluntario?</string>
    <string name="valtvesuvoluntario">"GRACIAS YA ERES PARTE DE NUESTRA RED DE VOLUNTARIOS "</string>
    <string name="valbtnregistro">REGISTRAR USUARIO</string>

    //LOGIN
    <string name="login_app_name">¡Bienvenido!</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="login_email_input_hint">E-mail</string>
    <string name="login_email_input_content_description_end_icon">email</string>
    <string name="login_password_input_hint">Contraseña</string>
    <string name="login_password_input_content_description_end_icon">Password</string>
    <string name="valchkguardardatos">Recordar</string>
    <string name="msgloginincompleto">Usuario y password son obligatorios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>